<resources>
    <string name="app_name">Foxmule</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="label_signup_fb">SIGNUP WITH FACEBOOK</string>
    <string name="label_or">OR</string>
    <string name="label_signup_phoneNumber">Signup with Phone Number</string>
    <string name="label_already_have_account_login">Already have an account? Login</string>
    <string name="label_enter_phone_number">Enter Phone Number</string>
    <string name="value_number_code">+91</string>
    <string name="label_otp_will_be_sent_to_number">Your one time password will be sent to this number</string>
    <string name="label_next">Next</string>
    <string name="error_number_exist">Phone number already exists</string>
    <string name="have_invite_code">I HAVE AN INVITE CODE</string>
    <string name="label_enter_confirmation_code">Enter Confirmation Code</string>
    <string name="label_enter_code_sent_to">Type the 6 digit code we sent to +91%s</string>
    <string name="label_create_username">Create Username</string>
    <string name="hint_add_username">Add a username or use our suggestion. You can change this any time.</string>
    <string name="error_invalid_username">Username isn\'t available. Try another.</string>
    <string name="label_agree_to_tnc">By signing up, you agree to our Terms and Privacy Policy.</string>
    <string name="label_enter_invite_code">Enter Invite Code</string>
    <string name="error_invalid_code">Incoorect Invite code! Please try again</string>

    <string name="facebook_app_id">1802718126424778</string>
    <string name="fb_login_protocol_scheme">fb1802718126424778</string>
</resources>
