<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">


    <ImageView
        android:layout_marginTop="100dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin">
        
       <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/black_overlay"
           android:layout_gravity="center"
           android:layout_marginLeft="@dimen/large_margin"
           android:layout_marginRight="@dimen/large_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_or"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@color/black_overlay"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_marginLeft="@dimen/large_margin"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_signup_phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:textStyle="bold"
        android:text="@string/label_signup_phoneNumber"
        android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_overlay"
            />

        <TextView
            android:id="@+id/tv_login"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_already_have_account_login"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>